@startuml





/' Objects '/

class Ataque {
	+Ataque()
	+Ataque(std::string nombre, int poder, int precision, int pp)
	+usarAtaque() : bool
	+getPPActual() : int {query}
	+getPPMax() : int {query}
	+getPoder() : int {query}
	+getPrecision() : int {query}
	-poder : int
	-ppActual : int
	-precision : int
	-puntosResistencia : int
	+getNombre() : std::string {query}
	-nombre : std::string
	+print() : void {query}
	+restaurarPP() : void
}


class Equipo {
	+Equipo(std::string nombre)
	+~Equipo()
	+getLuchador(int index) : Luchador* {query}
	+getLuchadorActivo() : Luchador* {query}
	+cambiarLuchador(int index) : bool
	+hayLuchadoresVivos() : bool {query}
	+contarLuchadoresVivos() : int {query}
	+getNumLuchadores() : int {query}
	-indexActivo : int
	+getNombre() : std::string {query}
	-nombreEquipo : std::string
	-luchadores : std::vector<Luchador*>
	+agregarLuchador(Luchador* luchador) : void
	+imprimirEquipo() : void {query}
	+imprimirEstadoEquipo() : void {query}
}


class Exotico {
	+Exotico()
	+Exotico(std::string name, int life, int attackPoints, int level, float love)
	+getLove() : float {query}
	-love : float
	+attack(Luchador& target) : void
	+print() : void {query}
	+receiveAttack(int damage) : void
	+revive() : void
	+setLove(float love) : void
}


abstract class Luchador {
	+Luchador()
	+Luchador(std::string name, int maxHP, int attackPoints, int level)
	+~Luchador()
	+getAtaque(int index) : Ataque* {query}
	+operator>(const Luchador& other) : bool {query}
	+tienePP() : bool {query}
	-HP : int
	+HPPercentage() : int {query}
	-attackPoints : int
	+getAttackPoints() : int {query}
	+getHP() : int {query}
	+getHealth() : int {query}
	+getLevel() : int {query}
	+getLife() : int {query}
	+getNumAtaques() : int {query}
	+getmaxHP() : int {query}
	-level : int
	-maxHP : int
	+getName() : std::string {query}
	-name : std::string
	-ataques : std::vector<Ataque*>
	+agregarAtaque(Ataque* ataque) : void
	+atacarCon(Ataque* ataque, Luchador& target) : void
	+attack(Luchador& target) : void
	+imprimirAtaques() : void {query}
	+print() : void {query}
	+printHPBar() : void {query}
	+printHealthBar() : void {query}
	+receiveAttack(int damage) : void
	+{abstract} revive() : void
	+setAttackPoints(int attackPoints) : void
	+setHP(int HP) : void
	+setHealth(int health) : void
	+setLevel(int level) : void
	+setName(std::string name) : void
	+setmaxHP(int maxHP) : void
}


class Rudo {
	+Rudo()
	+Rudo(std::string name, int life, int attackPoints, int level, int strength)
	+getStrength() : int {query}
	-strength : int
	+attack(Luchador& target) : void
	+print() : void {query}
	+receiveAttack(int damage) : void
	+revive() : void
	+setStrength(int strength) : void
}


class Tecnico {
	+Tecnico()
	+Tecnico(std::string name, int life, int attackPoints, int level, float accuracy)
	-accuracy : float
	+getAccuracy() : float {query}
	+attack(Luchador& target) : void
	+print() : void {query}
	+receiveAttack(int damage) : void
	+revive() : void
	+setAccuracy(float accuracy) : void
}





/' Inheritance relationships '/

Luchador <|-- Exotico


Luchador <|-- Rudo


Luchador <|-- Tecnico





/' Aggregation relationships '/

Equipo o-- Luchador


Luchador o-- Ataque






/' Nested objects '/



@enduml
